# stargan-v2

./: .gitignore  INSTALL.md  README.md  main.py  pyproject.toml  requirements.txt
core/: data_loader.py  model.py  solver.py
metrics/: classification.py  eval.py  fid.py  lpips.py
src/starganv2/: options.py
src/starganv2/core/: classification.py  data_loader.py  model.py  solver.py
src/starganv2/inference/: generate.py  model.py
src/starganv2/metrics/: conversion.py  eval.py  fid.py  lpips.py
tests/: test_models.py  test_solver.py
